#93 avoid flicker by first load in memos, show spinner immediately as currently api is always too slow

--- a/app/src/screens/memos/styles/memo.css
+++ b/app/src/screens/memos/styles/memo.css
@@ -8,6 +8,7 @@
     padding-top: 1rem;
     box-sizing: border-box;
     border-bottom: 1px solid #999;
+    visibility: hidden;
 }
 .memo .avatar {
     -webkit-flex: none;
